# iterate-dir

./: CMakeLists.txt  cache_dirs.h  cache_remover.cpp  calculate-dir-size.cpp  dir_mask.h  dir_size.h  dir_time.h  find-cache-dirs.cpp  find-repo.cpp  is_sub_dir.h  vcpkg.json
benchmark/: CMakeLists.txt  str.cpp
include/dir-iter/: dir-iter.h
